@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- Add support for simple aggregates for the cluster layer attributes (#3700)
+
 - Improved error reporting in msSaveImage() (#3733)
 
 - configure: look for libxslt.so under lib64 as well
